client/styles/main.css
:root {
  --main-bg-color: #0193ff;
  --main-color: #ffffff;
}

html {
  /* background-color: #7fd9fe; */
  background-color: var(--main-bg-color);
  color: var(--main-color);
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

html,
body,
ul,
p,
h2,
h3 {
  margin: 0px;
  padding: 0px;
}

a {
  color: var(--main-color);
  text-decoration-line: none;
}

textarea {
  resize: none;
  height: 200px;
}

button {
  background-color: var(--main-bg-color);
  color: var(--main-color);
  border: 2px solid;
  border-radius: 5px;
}

button:hover {
  background-color: var(--main-color);
  color: var(--main-bg-color);
}

button:active {
  background-color: var(--main-bg-color);
  color: var(--main-color);
}

input,
textarea {
  appearance: none;
  border: 2px solid;
  border-radius: 5px;
  background-color: var(--main-bg-color);
  color: var(--main-color);
}

.header {
  display: flex;
  padding: 20px 15px 10px 15px;
  margin-bottom: 20px;
  justify-content: space-between;
  align-items: center;
}

.header-title {
  font-size: xx-large;
  font-weight: 800;
}

.header-author {
  font-size: medium;
  padding-bottom: 5px;
  text-align: end;
}

.header-purpose {
  font-size: large;
}

.content {
  margin: 0px 60px 20px;
  display: flex;
  gap: 20px;
}

.job-postings-list {
  flex: 2;
  display: flex;
  flex-direction: column-reverse;
  gap: 10px;
}

.job-postings-list > .job-posting-element {
  list-style: none;
  border: 3px solid;
  padding: 15px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.job-posting-element > .job-posting-buttons {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
}

.job-posting-buttons button {
  padding: 6px;
  font-size: small;
  font-weight: 800;
}

.delete-button {
  background-color: var(--main-color);
  color: var(--main-bg-color);
}

.job-posting-element .delete-button:active {
  background-color: var(--main-color);
  color: var(--main-bg-color);
}

.delete-button:hover {
  background-color: var(--main-bg-color);
  color: var(--main-color);
}

.create-job-posting {
  flex: 1;
}

.update-content > .form-content,
.create-job-posting > .form-content {
  padding: 15px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  border: 3px solid;
  border-radius: 10px;
}

.form-content > form {
  flex: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.form-content > form > p {
  display: flex;
  flex-direction: column;
}

.form-content > form > p > label {
  margin-bottom: 2px;
  font-size: small;
}

.form-content > form > p > input {
  padding: 5px;
  font-size: medium;
}

.form-content > form > p > textarea {
  font-size: large;
}

.form-content > form > button {
  padding: 20px;
  font-size: x-large;
  font-weight: 800;
}

.update-content {
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.update-content > .form-content {
  width: 800px;
}

.form-content textarea {
  height: 300px;
}

